lox-tests/tests/variable/collide_with_parameter.stderr
ERROR: Already declared variable 'a' in this local scope
 --> 2:7
  |
2 |   var a; // Error at 'a': Already a variable with this name in this scope.
  |       ^
